try fix composer

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "prefer-stable": true,
+    "prefer-source": true,
     "name": "miusuario/mi-api",
     "description": "API para gestión de cupones",
     "authors": [
