--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "8.3.7",
+        "php": "^8.3.0",
         "slim/slim": "^4.0"
     },
     "autoload": {
